--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+
 <header>
 	<h1>
 		<img class = "imagen1" src="imagenes/imagen1.jpg" alt=""> Parque ecol&oacute;gico
 	</h1>
 </header>
+
 <navbar id="menu-principal">
 	<ul>
 		<li><a href="#">Inicio</a></li>
@@ -16,20 +18,25 @@
 		<li><a href="#">Galer&iacute;a</a></li>
 	</ul>
 </navbar>
-<section id="contenido">
 
+
+<section class="contenido">
+<div>
 	<p>
 		
 		<img class = "imagen2" src="imagenes/imagen2.jpg" alt="">
-		Descripci&oacute;n de la foto del parque...
-		Descripci&oacute;n de la foto del parque...
-		Descripci&oacute;n de la foto del parque...
-		Descripci&oacute;n de la foto del parque...
-		Descripci&oacute;n de la foto del parque...
-		Descripci&oacute;n de la foto del parque...
-	</p>
 
+		Descripci&oacute;n de la foto del parque...<br>
+		Descripci&oacute;n de la foto del parque...<br>
+		Descripci&oacute;n de la foto del parque...<br>
+		Descripci&oacute;n de la foto del parque...<br>
+		Descripci&oacute;n de la foto del parque...<br>
+		Descripci&oacute;n de la foto del parque...<br>
+
+	</p>
+</div>
 </section>
+
 
 <footer>
 	Derechos Reservados
